--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -74,18 +74,38 @@
     border-bottom: none;
     border-radius: 4px;
     display: flex;
+    justify-content: space-between;
 }
 
 .checkbox-input {
+    cursor: pointer;
     width: 20px;
     height: 20px;
     margin-top: 12px;
     margin-right: 12px;
+    accent-color: #ff0095;
+}
+
+.checkbox-data{
+    display: flex;
+    flex-direction: column;
 }
 
 .checkbox-label {
     font-family: "Roboto";
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 400;
+    width: 82%;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+}
+.checkbox-label-desc {
+    font-family: "Roboto";
+    font-size: 14px;
     font-weight: 400;
     width: 82%;
     margin: 0;
