--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -83,7 +83,7 @@
     height: 20px;
     margin-top: 12px;
     margin-right: 12px;
-    accent-color: #ff0095;
+    accent-color:#e91e63;
 }
 
 .checkbox-data{
