--- a/frontend/src/components/Login/index.css
+++ b/frontend/src/components/Login/index.css
@@ -1,12 +1,11 @@
 .container2 {
-    margin: auto;
-    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 40px;
-    box-shadow: 0px 0px 3px 1px rgb(158, 155, 155);
-    margin-top: 20px;
+    padding: 25px;
+    box-shadow: 0px 0px 0px 2px rgb(131, 130, 130);
+    width: 300px;
+    max-width: 400px;
 }
 
 .container {
@@ -23,8 +22,6 @@
 
 .input {
     border-radius: 18px;
-    border: 1px solid black;
-    padding: 8px;
     width: auto;
     outline: none;
 }
@@ -95,7 +92,7 @@
 }
 
 @media screen and (max-width:400px){
-    .container{
-        width: 400px;
+    .container2{
+        width: 300px;
     }
 }
