--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -19,6 +19,8 @@
     font-family: "Roboto";
     font-size: 32px;
     font-weight: 700;
+    display: flex;
+    justify-content: space-between;
 }
 
 .create-task-heading-subpart {
@@ -146,4 +148,5 @@
     padding-right: 20px;
     padding-left: 20px;
     outline: none;
+    cursor: pointer;
 }
