--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -21,6 +21,7 @@
     font-weight: 700;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .create-task-heading-subpart {
