--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -24,6 +24,9 @@
     align-items: center;
 }
 
+.logout{
+    color: #e91e63;
+}
 .create-task-heading-subpart {
     font-family: "Roboto";
     font-size: 32px;
